--- a/Sidebar.html
+++ b/Sidebar.html
@@ -1,87 +1,153 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <base target="_top">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    /* ... (Style CSS Anda yang lama, tidak perlu diubah, copy bagian CSS dari file lama Anda) ... */
-    /* Tambahkan sedikit CSS ini jika belum ada */
-    body { margin: 0; padding: 0; font-family: 'Inter', sans-serif; background-color: #f3f4f6; }
-    .nav-item { display: flex; align-items: center; gap: 12px; padding: 12px; margin-bottom: 4px; border-radius: 12px; color: #6b7280; text-decoration: none; cursor: pointer; transition: 0.3s; }
-    .nav-item:hover { background-color: #f9fafb; color: #1f2937; }
-    .nav-item.active { background-color: #e0e7ff; color: #4f46e5; font-weight: 600; }
-    .nav-label { font-size: 11px; text-transform: uppercase; color: #9ca3af; font-weight: 700; margin: 24px 0 8px 12px; letter-spacing: 0.5px; }
-  </style>
-</head>
-<body>
+<style>
+    /* Sidebar Styles */
+    .nav-item {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        padding: 12px;
+        margin-bottom: 4px;
+        border-radius: 12px;
+        color: #6b7280;
+        text-decoration: none;
+        cursor: pointer;
+        transition: 0.3s;
+    }
 
-<div class="sidebar" style="width: 260px; height: 100vh; background: white; border-right: 1px solid #e5e7eb; display: flex; flex-direction: column;">
-  
-  <div style="padding: 24px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6;">
-    <div style="width: 32px; height: 32px; background: #4f46e5; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: white;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/></svg>
+    .nav-item:hover {
+        background-color: #f9fafb;
+        color: #1f2937;
+    }
+
+    .nav-item.active {
+        background-color: #e0e7ff;
+        color: #4f46e5;
+        font-weight: 600;
+    }
+
+    .nav-label {
+        font-size: 11px;
+        text-transform: uppercase;
+        color: #9ca3af;
+        font-weight: 700;
+        margin: 24px 0 8px 12px;
+        letter-spacing: 0.5px;
+    }
+</style>
+
+<div class="sidebar"
+    style="width: 260px; height: 100vh; background: white; border-right: 1px solid #e5e7eb; display: flex; flex-direction: column;">
+
+    <div style="padding: 24px; display: flex; align-items: center; gap: 12px; border-bottom: 1px solid #f3f4f6;">
+        <div
+            style="width: 32px; height: 32px; background: #4f46e5; border-radius: 8px; display: flex; align-items: center; justify-content: center; color: white;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 2L2 7l10 5 10-5-10-5z" />
+                <path d="M2 17l10 5 10-5" />
+                <path d="M2 12l10 5 10-5" />
+            </svg>
+        </div>
+        <span style="font-weight: 700; font-size: 18px; color: #1f2937;">SertifikasiApp</span>
     </div>
-    <span style="font-weight: 700; font-size: 18px; color: #1f2937;">SertifikasiApp</span>
-  </div>
 
-  <div style="flex: 1; overflow-y: auto; padding: 24px 16px;">
-    
-    <div class="nav-label">Menu Utama</div>
+    <div style="flex: 1; overflow-y: auto; padding: 24px 16px;">
 
-    <a onclick="setActive(this, 'Dashboard', 'page-dashboard')" class="nav-item active">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="3" width="7" height="7"/><rect x="14" y="3" width="7" height="7"/><rect x="14" y="14" width="7" height="7"/><rect x="3" y="14" width="7" height="7"/></svg>
-      <span>Dashboard</span>
-    </a>
+        <div class="nav-label">Menu Utama</div>
 
-    <a onclick="setActive(this, 'Perencanaan', 'page-perencanaan')" class="nav-item">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
-      <span>Perencanaan</span>
-    </a>
+        <a onclick="setActive(this, 'Dashboard', 'page-dashboard')" class="nav-item active">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="3" width="7" height="7" />
+                <rect x="14" y="3" width="7" height="7" />
+                <rect x="14" y="14" width="7" height="7" />
+                <rect x="3" y="14" width="7" height="7" />
+            </svg>
+            <span>Dashboard</span>
+        </a>
 
-    <a onclick="alert('Fitur Pelaksanaan belum tersedia')" class="nav-item" style="opacity: 0.5;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
-      <span>Pelaksanaan</span>
-    </a>
+        <a onclick="setActive(this, 'Perencanaan', 'page-perencanaan')" class="nav-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                <line x1="16" y1="2" x2="16" y2="6" />
+                <line x1="8" y1="2" x2="8" y2="6" />
+                <line x1="3" y1="10" x2="21" y2="10" />
+            </svg>
+            <span>Perencanaan</span>
+        </a>
 
-    <a onclick="alert('Fitur Evaluasi belum tersedia')" class="nav-item" style="opacity: 0.5;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
-      <span>Evaluasi</span>
-    </a>
+        <a onclick="setActive(this, 'Pelaksanaan', 'page-pelaksanaan')" class="nav-item">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                <polyline points="14 2 14 8 20 8" />
+                <line x1="16" y1="13" x2="8" y2="13" />
+                <line x1="16" y1="17" x2="8" y2="17" />
+                <polyline points="10 9 9 9 8 9" />
+            </svg>
+            <span>Pelaksanaan</span>
+        </a>
 
-    <div class="nav-label">Laporan & Analisis</div>
+        <a onclick="alert('Fitur Evaluasi belum tersedia')" class="nav-item" style="opacity: 0.5;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10" />
+                <path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3" />
+                <line x1="12" y1="17" x2="12.01" y2="17" />
+            </svg>
+            <span>Evaluasi</span>
+        </a>
 
-    <a onclick="alert('Fitur Analisis belum tersedia')" class="nav-item" style="opacity: 0.5;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/></svg>
-      <span>Analisis</span>
-    </a>
+        <div class="nav-label">Laporan & Analisis</div>
 
-    <a onclick="alert('Fitur Laporan belum tersedia')" class="nav-item" style="opacity: 0.5;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
-      <span>Laporan</span>
-    </a>
+        <a onclick="alert('Fitur Analisis belum tersedia')" class="nav-item" style="opacity: 0.5;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="18" y1="20" x2="18" y2="10" />
+                <line x1="12" y1="20" x2="12" y2="4" />
+                <line x1="6" y1="20" x2="6" y2="14" />
+            </svg>
+            <span>Analisis</span>
+        </a>
 
-    <div class="nav-label">Sistem Pengaturan</div>
+        <a onclick="alert('Fitur Laporan belum tersedia')" class="nav-item" style="opacity: 0.5;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                <polyline points="14 2 14 8 20 8" />
+                <line x1="16" y1="13" x2="8" y2="13" />
+                <line x1="16" y1="17" x2="8" y2="17" />
+                <polyline points="10 9 9 9 8 9" />
+            </svg>
+            <span>Laporan</span>
+        </a>
 
-    <a onclick="alert('Fitur Pengaturan belum tersedia')" class="nav-item" style="opacity: 0.5;">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
-      <span>Pengaturan</span>
-    </a>
+        <div class="nav-label">Sistem Pengaturan</div>
 
-  </div>
+        <a onclick="alert('Fitur Pengaturan belum tersedia')" class="nav-item" style="opacity: 0.5;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="3" />
+                <path
+                    d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z" />
+            </svg>
+            <span>Pengaturan</span>
+        </a>
+
+    </div>
 </div>
 
 <script>
-  function setActive(element, pageName, targetId) {
-    // UI Update
-    document.querySelectorAll('.nav-item').forEach(item => item.classList.remove('active'));
-    element.classList.add('active');
+    function setActive(element, pageName, targetId) {
+        // UI Update
+        document.querySelectorAll('.nav-item').forEach(item => item.classList.remove('active'));
+        element.classList.add('active');
 
-    // Call Main Page Function
-    if (typeof openSubPage === 'function') {
-      openSubPage(targetId, pageName);
+        // Call Main Page Function
+        if (typeof openSubPage === 'function') {
+            openSubPage(targetId, pageName);
+        } else {
+            console.error('openSubPage function not found!');
+        }
     }
-  }
 </script>
-
-</body>
-</html>
